--- a/Exercicios/ex 026/mq2/estilos/style.css
+++ b/Exercicios/ex 026/mq2/estilos/style.css
@@ -2,3 +2,24 @@
 
 /*Configurações gerais*/
 
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+}
+
+h1{
+    color: white;
+    text-shadow: 3px 3px 0px #0e185f;
+    padding: 10px;
+    text-align: center;
+}
